# scala-pre-commit-hooks

./: .pre-commit-hooks.yaml  README.md  setup.cfg
pre_commit_hooks/: sbt_scalafix.py  sbt_scalafmt.py
