[metadata]
name = pre_commit_hooks
version = 0.8.0

[options]
packages = find:
install_requires =
    colorama
python_requires = >=3.6

[options.entry_points]
console_scripts =
    sbt-wartremover = pre_commit_hooks.sbt_wartremover:main
    sbt-scalafmt = pre_commit_hooks.sbt_scalafmt:main
    sbt-scalafix = pre_commit_hooks.sbt_scalafix:main
    sbt-fatal-warnings = pre_commit_hooks.sbt_fatal_warnings:main
